Add private modifiers & change endpoints